# scobo2

./: CMakeLists.txt  README.md  airduino_combined_ros2.cpp  airterm.py  package.xml
airduino_combined_ros2/: airduino_combined_ros2.ino
config/: drive_bot.rviz  view_bot.rviz
description/: camera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
worlds/: obstacles.world
